# Lambda

./: README.md  polytype.cabal  stack.yaml  test.hs
sample/: fix_test.lambda  helloworld.lambda  reverse.lambda  reverse_another.lambda  test.lambda
src/: Eval.hs  Main.hs  Parser.hs  Term.hs  Type.hs
